# chickens-classifier

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  setup.cfg
.devcontainer/: devcontainer.json
chicken_classifier/: config.py
chickens_classifier/: __init__.py  __main__.py  config.py  dataset.py  model.py  train.py
