[metadata]
name = chicken-classifier
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fire
    owlml==0.1.2.dev1684878969

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    chicken-classifier = chicken_classifier.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import