[metadata]
name = chicken-classifier
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fire
    mlflow-skinny
    pytorch-lightning
    torch
    torchvision
    owlml==0.1.2.dev1684961062

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    chickens-classifier = chickens_classifier.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import